--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         Enter the 6‑digit code below to continue.
       </p>
 
-      <form id="code-form" autocomplete="one-time-code" aria-describedby="instructions" novalidate>
+      <form action="dashboard.html" id="code-form" autocomplete="one-time-code" aria-describedby="instructions" novalidate>
         <label class="sr-only" for="code-1">Verification code digits</label>
         <div class="code-grid" aria-hidden="false" aria-label="Verification code input, 6 boxes">
           <input inputmode="numeric" pattern="\\d*" maxlength="1" class="code-input" id="code-1" aria-label="Digit 1" required />
