--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
         <div class="actions">
           <button type="submit" class="btn primary" id="submit-btn" aria-label="Submit verification code">Verify</button>
-          <button type="button" class="btn" href="https://gmail.com" id="open-gmail" aria-label="Open Gmail in a new tab">Open Gmail</button>
+          <a href="https://gmail.com"><button type="button" class="btn" href="https://gmail.com" id="open-gmail" aria-label="Open Gmail in a new tab">Open Gmail</button></a>
           <button type="button" class="btn" id="resend-btn" aria-live="polite" disabled>Resend code in <span id="timer">60</span>s</button>
         </div>
 
