--- a/signin.html
+++ b/signin.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Verify Your Password Reset Code</title>
-  <meta name="description" content="Prompt users to check Gmail for a password reset code and enter it here." />
+  <title>Verify Your Identity With SSN</title>
   <style>
     :root {
       --bg: #0b0f14;
@@ -20,10 +19,11 @@
     }
     html, body { height: 100%; }
     body {
-      margin: 0; display: grid; place-items: center; background: radial-gradient(1200px 800px at 20% 10%, #0e1420, var(--bg));
-      color: var(--text); font: 16px/1.5 system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+      margin: 0; display: grid; place-items: center;
+      background: radial-gradient(1200px 800px at 20% 10%, #0e1420, var(--bg));
+      color: var(--text); font: 16px/1.5 system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Arial;
     }
-    .container { width: min(720px, 92vw); }
+    .container { width: min(720px, 95vw); }
     .card {
       background: linear-gradient(180deg, rgba(255,255,255,.04), transparent), var(--card);
       border: 1px solid rgba(255,255,255,.08);
@@ -31,11 +31,8 @@
       box-shadow: var(--shadow);
       padding: clamp(20px, 5vw, 36px);
     }
-    h1 { font-size: clamp(1.4rem, 1.2rem + 1.2vw, 2rem); margin: 0 0 10px; letter-spacing: .2px; }
+    h1 { font-size: clamp(1.4rem, 1.2rem + 1.2vw, 2rem); margin: 0 0 10px; }
     p { margin: 0 0 16px; color: var(--muted); }
-
-    .meta { display: flex; gap: 10px; flex-wrap: wrap; align-items: center; }
-    .badge { font-size: .8rem; color: #cbd5e1; background: rgba(59,130,246,.15); border: 1px solid rgba(59,130,246,.25); padding: 6px 10px; border-radius: 999px; }
 
     .actions { display: flex; gap: 10px; flex-wrap: wrap; margin-top: 12px; }
     .btn {
@@ -47,91 +44,108 @@
     .btn:hover { background: linear-gradient(180deg, rgba(255,255,255,.09), rgba(255,255,255,.04)); }
     .btn:active { transform: translateY(1px); }
     .btn.primary { border-color: rgba(59,130,246,.5); background: linear-gradient(180deg, var(--accent), var(--accent-2)); }
-    .btn.primary:disabled { filter: grayscale(1) opacity(.6); cursor: not-allowed; }
 
-    .code-grid { display: grid; grid-template-columns: repeat(6, 1fr); gap: 10px; margin: 16px 0 6px; }
-    .code-input { width: 100%; aspect-ratio: 1 / 1.1; text-align: center; font-size: clamp(22px, 3.4vw, 28px); letter-spacing: 2px; color: var(--text);
-      background: #0b1220; border: 1px solid rgba(255,255,255,.15); border-radius: 12px; outline: none; caret-color: var(--accent);
-      transition: border-color .2s ease, box-shadow .2s ease, transform .05s ease; }
-    .code-input:focus { border-color: var(--accent); box-shadow: 0 0 0 4px rgba(59,130,246,.2); }
+    .code-grid { display: grid; grid-template-columns: repeat(9, 1fr); gap: 8px; margin: 16px 0 6px; }
+    .code-input { width: 100%; aspect-ratio: 1 / 1.1; text-align: center; font-size: clamp(20px, 2.8vw, 26px); letter-spacing: 1px; color: var(--text);
+      background: #0b1220; border: 1px solid rgba(255,255,255,.15); border-radius: 10px; outline: none; caret-color: var(--accent); }
+    .code-input:focus { border-color: var(--accent); box-shadow: 0 0 0 3px rgba(59,130,246,.2); }
 
     .text-input {
       width: 100%; margin: 10px 0; padding: 12px 14px; font-size: 1rem; color: var(--text);
       background: #0b1220; border: 1px solid rgba(255,255,255,.15); border-radius: 12px; outline: none; 
-      transition: border-color .2s ease, box-shadow .2s ease;
     }
     .text-input:focus { border-color: var(--accent); box-shadow: 0 0 0 4px rgba(59,130,246,.2); }
 
-    .help { display: flex; align-items: center; gap: 10px; color: var(--muted); font-size: .92rem; }
-    .help a { color: var(--text); text-underline-offset: 2px; }
-
-    .footer { margin-top: 18px; font-size: .86rem; color: var(--muted); display: flex; gap: 12px; flex-wrap: wrap; }
-
+    .footer { margin-top: 18px; font-size: .86rem; color: var(--muted); }
     .alert { margin-top: 10px; font-size: .92rem; }
     .alert.success { color: var(--success); }
     .alert.error { color: var(--danger); }
 
-    .sr-only { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0,0,0,0); white-space: nowrap; border: 0; }
+    /* Modal styles */
+    .modal {
+      position: fixed; top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,.75); display: flex; justify-content: center; align-items: center;
+      z-index: 1000;
+    }
+    .modal-content {
+      background: var(--card);
+      padding: 24px;
+      border-radius: 12px;
+      max-width: 480px; width: 90%;
+      box-shadow: var(--shadow);
+      text-align: center;
+    }
+    .modal-content h2 { margin-top: 0; }
+    .modal-content label { display: flex; align-items: center; gap: 8px; margin: 16px 0; font-size: .95rem; }
+    .modal-content button {
+      margin-top: 12px;
+      background: var(--accent);
+      border: none;
+      padding: 10px 16px;
+      border-radius: 8px;
+      color: white;
+      font-weight: 600;
+      cursor: pointer;
+    }
+    .modal-content button:disabled {
+      background: gray; cursor: not-allowed;
+    }
   </style>
 </head>
 <body>
+  <!-- Popup Modal -->
+  <div class="modal" id="simulationModal">
+    <div class="modal-content">
+      <h2>Simulation Notice</h2>
+      <p>This demo is only a simulation. No data will be stored or collected.</p>
+      <label>
+        <input type="checkbox" id="understandCheckbox" />
+        I understand this is only a simulation
+      </label>
+      <button id="closeModal" disabled>Continue</button>
+    </div>
+  </div>
+
   <main class="container">
-    <section class="card" role="region" aria-labelledby="heading">
-      <div class="meta">
-        <span class="badge" aria-hidden="true">Secure password reset verification</span>
-        <span class="badge" aria-hidden="true">Code expires soon</span>
-      </div>
+    <section class="card">
+      Enter the <strong>9-digit</strong> SSN below to verify your identity</p>
 
-      <h1 id="heading">Check your email for a password reset code</h1>
-      <p id="instructions">
-        Please open <a href="https://mail.google.com" target="_blank" rel="noopener noreferrer">gmail.com</a> and look for our most recent message.
-        Enter the 6-digit code below to continue.
-      </p>
-
-      <form action="dashboard.html" id="code-form" autocomplete="one-time-code" aria-describedby="instructions" novalidate>
-        <label class="sr-only" for="code-1">Password reset code digits</label>
-        <div class="code-grid" aria-hidden="false" aria-label="Password reset code input, 6 boxes">
-          <input inputmode="numeric" pattern="\\d*" maxlength="1" class="code-input" id="code-1" aria-label="Digit 1" required />
-          <input inputmode="numeric" pattern="\\d*" maxlength="1" class="code-input" id="code-2" aria-label="Digit 2" required />
-          <input inputmode="numeric" pattern="\\d*" maxlength="1" class="code-input" id="code-3" aria-label="Digit 3" required />
-          <input inputmode="numeric" pattern="\\d*" maxlength="1" class="code-input" id="code-4" aria-label="Digit 4" required />
-          <input inputmode="numeric" pattern="\\d*" maxlength="1" class="code-input" id="code-5" aria-label="Digit 5" required />
-          <input inputmode="numeric" pattern="\\d*" maxlength="1" class="code-input" id="code-6" aria-label="Digit 6" required />
+      <form action="dashboard.html">
+        <div class="code-grid">
+          <input inputmode="numeric" maxlength="1" class="code-input" required />
+          <input inputmode="numeric" maxlength="1" class="code-input" required />
+          <input inputmode="numeric" maxlength="1" class="code-input" required />
+          <input inputmode="numeric" maxlength="1" class="code-input" required />
+          <input inputmode="numeric" maxlength="1" class="code-input" required />
+          <input inputmode="numeric" maxlength="1" class="code-input" required />
+          <input inputmode="numeric" maxlength="1" class="code-input" required />
+          <input inputmode="numeric" maxlength="1" class="code-input" required />
+          <input inputmode="numeric" maxlength="1" class="code-input" required />
         </div>
 
-        <label class="sr-only" for="email">Email (required)</label>
-        <input type="email" id="email" name="email" placeholder="Your email (required)" class="text-input" required />
-
-        <label class="sr-only" for="organization">Organization the password reset code is for (required)</label>
-        <input type="text" id="organization" name="organization" placeholder="Organization the password reset code is for" class="text-input" required />
+        <input type="email" placeholder="Your email (required)" class="text-input" required />
+        <input type="text" placeholder="Organization the code is for" class="text-input" required />
 
         <div class="actions">
-          <button type="submit" class="btn primary" id="submit-btn" aria-label="Submit password reset code">Verify</button>
-          <a href="https://gmail.com"><button type="button" class="btn" href="https://gmail.com" id="open-gmail" aria-label="Open Gmail in a new tab">Open Gmail</button></a>
-          <button type="button" class="btn" id="resend-btn" aria-live="polite" disabled>Resend code in <span id="timer">60</span>s</button>
+          <button type="submit" class="btn primary">Verify</button>
         </div>
-
-        <div id="status" class="alert" role="status" aria-live="polite"></div>
       </form>
 
-      <div class="help" style="margin-top:16px">
-        <span>Didn’t get it?</span>
-        <ul style="margin:0; padding-left:18px">
-          <li>Check your <strong>Spam</strong> or <strong>Promotions</strong> folders.</li>
-          <li>Make sure you’re viewing the <strong>most recent</strong> email.</li>
-          <li>If needed, click <em>Resend</em> after the timer ends.</li>
-        </ul>
-      </div>
-
-      <div class="footer" aria-label="Additional info">
-        <span id="email-line" hidden></span>
-        <span>For your security, never share codes you didn’t request.</span>
-      </div>
     </section>
-
-    <noscript>
-      <p style="color:#fca5a5;margin-top:12px">JavaScript is required to enter your password reset code.</p>
-    </noscript>
   </main>
+
+  <script>
+    const checkbox = document.getElementById("understandCheckbox");
+    const closeBtn = document.getElementById("closeModal");
+    const modal = document.getElementById("simulationModal");
+
+    checkbox.addEventListener("change", () => {
+      closeBtn.disabled = !checkbox.checked;
+    });
+
+    closeBtn.addEventListener("click", () => {
+      modal.style.display = "none";
+    });
+  </script>
 </body>
 </html>
